app/assets/stylesheets/live_jobs.scss
// Place all the styles related to the LiveJobs controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: https://sass-lang.com/

.live_jobs {
  .main {
    background-color: #f8f8f8;
  }

  ul {
    list-style-type: none;
  }

  a:hover, a:visited, a:link, a:active
  {
    text-decoration: none;
  }

  .jobs-section {
    display: flex;
    flex-direction: column;
  }

  .job-listings {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    font-family: sans-serif;
    margin: 0px;
    padding: 0px 20px 20px 20px;
    display: flex;
    flex: 1 1;

    @media (min-width: 992px) {
      padding: 0px 60px 20px 20px;
      width: 72vw;
    }
  }

  .filters-container, .jobs-found, .job-details, .job-right {
    color: #040403;
  }

  #jobs-found-container {
    @media (min-width: 992px) {
      // Make it sticky
      position: -webkit-sticky;
      position: sticky;
      top: 0;
      //

      height: 55px;
      background-color: #f8f8f8;
    }
  }

  .jobs-found {
    color: #3cbfab;

    font-size: 2.5rem;

    text-align: end;
    padding-right: 20px;
    margin-top: 20px;
    margin-bottom: 5px;


    @media (min-width: 992px) {
      font-size: 1.6rem;
      margin-top: 20px;
    }
  }

  .company, .title, .location, .posted {
    display: block;
  }

  .job {
    padding: 10px;
  }

  .job-details-container {
    display: flex;
    flex-direction: row;
    justify-content: center;
    background-color: #ffffff;
    border: none;
    padding: 30px 30px 30px 40px;
    border-radius: 20px;
    max-width: 95vw;

    @media (min-width: 992px) {
      padding: 20px 30px 20px 40px;
      max-width: 70vw;
    }

    @media (max-width: 991px) {
      margin: 10px 15px 10px 15px;
    }
  }

  .job-details {
    flex-grow: 3;
    flex-shrink: 0;
    flex-basis: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    font-size: 2rem;

    @media (min-width: 992px) {
      font-size: 1.5rem;
    }

    .title {
      font-weight: bold;
      font-size: 2.2rem;
      padding: 10px 0px 10px 0px;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;


      @media (min-width: 992px) {
        font-size: 1.7rem;
      }
    }

    .company {
      font-size: 1.9rem;
      font-weight: bold;
      color: #3cbfab;

      @media (min-width: 992px) {
        font-size: 1.2rem;
      }
    }

    .requires-experience, .requires-stem-degree {
      display: flex;
      justify-content: center;
      align-items: center;

      @media (max-width: 991px) {
        width: 170px;
      }

    }

    .location {
      display: flex;
      justify-content: center;
      align-items: center;
      width: 180px;
      padding-left: 15px;

      .location-text {
        padding-left: 10px;
        overflow: hidden;
        text-overflow: ellipsis;
        white-space: nowrap;
      }

      @media (min-width: 992px) {
        width: 150px;


        .location-image {
          content: url("map-pin.png");
          width: 15%;
        }
      }
    }
  }

  .jobs-container {
    display: flex;
    flex: 1;
    flex-direction: column;

    @media (min-width: 992px) {
      flex-direction: row;
    }
  }

  .filters {
    display: flex;
    justify-content: center;
    padding-bottom: 30px;
  }


  .shortened-mobile-filter-container {
    @media (max-width: 991px) {
      flex: 0 1 5em;
      height: 5em;
    }
  }

  .hide-filter {
    @media (max-width: 991px) {
      display: none;
    }
  }

  .filters-container {
    margin-left: 15px;
    margin-top: 40px;
    font-size: 2.1em;
    font-family: sans-serif;

    @media (max-width: 991px) {
      margin: 50px 40px 10px 45px;
      margin-right: 15px;
    }

    @media (min-width: 992px) {
      flex: 0 0 25rem;
    }
  }

  .filters-background {
    background-color: #ffffff;
    padding-bottom: 10px;
    padding-right: 10px;
    border-radius: 20px;

    @media (min-width: 992px) {
      margin-left: 30px;
      margin-right: 20px;
      font-size: 1rem;

      // Make it sticky
      position: -webkit-sticky;
      position: sticky;
      top: 0;
      //
    }
  }

  .filter-title {
    font-family: sans-serif;
    font-weight: bold;
    font-size: 2.5rem;

    @media (min-width: 992px) {
      font-size: 1.1rem;
    }
  }

  #filter-header {
    font-family: sans-serif;
    font-weight: bold;
    text-align: start;
    padding: 20px 0px 25px 30px;
    display: block;
    font-size: 3rem;

    @media (max-width: 991px) {
      padding-top: 50px;
      padding-left: 50px;
    }

    @media (min-width: 992px) {
      font-size: 1.6rem;
    }
  }

  #filter-header-container {
    display: flex;
  }

  #filter-image {
    content: url("dropdown-circle.png");
    margin-left: auto;
    padding: 40px 40px 0px 0px;
    width: 12%;
    height: 12%;

    @media (min-width: 992px) {
      display: none;
    }
  }

  .filter-text {
    font-family: sans-serif;
    font-size: 2.3rem;
    padding: 0px 0px 5px 0px;

    @media (min-width: 992px) {
      font-size: 1rem;
    }
  }

 .question-mark {
    content: url("question-mark.png");
    padding-left: 5px;

   @media (min-width: 992px) {
     width: 11%;
     height: 11%;
   }
  }

  .question-text {
    display: none;
  }

  .filter-with-question-container {
    margin: 30px 0px 30px 0px;

    @media (min-width: 992px) {
      margin: 0px;
    }
  }

  .question-text {
    background-color: rgba(234, 254, 251, 1);
    padding: 17px;
    margin: 20px 30px 20px 0px;
    text-align: center;
    font: inherit;
  }

  .filter {
    padding-left: 30px;

    @media (max-width: 991px) {
      margin: 30px 0px 50px 30px;
    }
  }

  .filter-box {
    border: grey solid 1px;
    width: 1.8em;
    height: 1.8em;
    background-color: #ffffff;
    margin-right: 15px;
  }

  .checkbox-container, dropdown-container {
    display: flex;
    margin: 15px 0px 10px 0px;

    @media (max-width: 992px) {
      padding: 20px 0px 20px 0px;
    }
  }

  .tags-container {
    display: flex;
  }
  .tag, .non-filter-tag {
    background-color: #f8f8f8;
    border: solid 1px grey;
    color: #04080F;
    padding: 13px 25px 13px 13px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    border-radius: 7px;
    margin-top: 20px;
    margin-right: 20px;
    font-size: 25px;
    width: 220px;

    @media (min-width: 992px) {
      font-size: 16px;
    }
  }

  @media (min-width: 992px) {
    .requires-experience:before {
      content: url("requires-experience.png");
      padding-right: 10px;
      vertical-align: top; // stops the text being pushed down
    }

    .requires-stem-degree:before {
      content: url("requires-degree.png");
      padding-right: 10px;
      vertical-align: top; // stops the text being pushed down
    }
  }

  .checked-tag, .checked-date-filter {
    background-color: #3cbfab;
  }

  .filter a:link,
  .filter a:visited,
  .filter a:hover,
  .filter a:active {
    text-decoration: none;
    color: #040403;
  }

  .pagy-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    margin-bottom: 20px;

    a {
      color: #3cbfab;
    }

    .page-item.active .page-link {
      background-color: #3cbfab;
      border-color: #3cbfab;
    }
  }

  .posted-container {
    //border: solid red 2px;
    width: 170px;
    display: flex;
    align-items: flex-start;
    justify-content: start;

    .posted-date {
      //border: green solid 2px;
      background: radial-gradient(
                      ellipse at center,
                      rgba(234, 254, 251, 1) 0%,
                      rgba(234, 254, 251, 1) 70%,
                      rgba(234, 254, 251, 0) 70.3%
      );
      height: 70%;
      width: 70%;
      color: rgba(29, 183, 163, 1);
      position: relative;
      margin-top: 5px;
      display: flex;
      justify-content: center;
      align-items: center;

      @media (min-width: 992px) {
        height: 60%;
        width: 60%;
      }

      p {
        padding-top: 15px;
        font-weight: bolder;
        font-size: 1.4rem;

        @media (min-width: 992px) {
          font-size: 1.2rem;
        }
      }

    }
  }

  .location-dropdown {
    margin: 20px 0px 20px 0px;
    display: block;
    font-size: 16px;
    font-family: sans-serif;
    font-weight: 700;
    color: #444;
    line-height: 1.3;
    padding: .6em 1.4em .5em .8em;
    width: 70%;
    max-width: 100%;
    box-sizing: border-box;
    border: 1px solid #aaa;
    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
    border-radius: .5em;
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    background-color: #fff;
    background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
    linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
    background-repeat: no-repeat, repeat;
    background-position: right .7em top 50%, 0 0;
    background-size: .65em auto, 100%;

    @media (max-width: 991px) {
      font-size: 2rem;
      margin: 30px 0px 30px 0px;
    }
  }

  .location-dropdown::-ms-expand {
    display: none;
  }

  .location- dropdown:hover {
    border-color: #888;
  }

  .location-dropdown:focus {
    border-color: #aaa;
    box-shadow: 0 0 1px 3px #3cbfab;
    box-shadow: 0 0 0 3px -moz-mac-focusring;
    color: #222;
    outline: none;
  }

  .location-dropdown option {
    font-weight:normal;
  }
}

